[tool.poetry]
name = "django-markymark"
version = "4.0.2"
description = "django-markymark provides helpers and tools to integrate markdown."
authors = [
	"Stephan Jaekel <steph@rdev.info>",
]
license = "MIT"
readme = "README.rst"
homepage = 'https://github.com/stephrdev/django-markymark'
repository = 'https://github.com/stephrdev/django-markymark'
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: MIT License",
	"Environment :: Web Environment",
	"Framework :: Django",
	"Intended Audience :: Developers",
	"Operating System :: Unix",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
]
packages = [{ include = "markymark" }]
include = ["LICENSE.rst"]

[tool.poetry.dependencies]
python = ">=3.10,<4"

Django = ">=4.2,<6"
Markdown = ">=3.4"
Sphinx = {version = ">=5.1", optional = true}
django-anylink = {version = ">=2.0.1", optional = true}
django-filer = {version = ">=2.2.3", optional = true}

[tool.poetry.dev-dependencies]
pytest = ">=7.1"
pytest-cov = ">=3.0"
pytest-django = ">=4.5"
pytest-flake8 = ">=1.1"
pytest-isort = ">=3.0"
pytest-black = ">=0.3"
factory-boy = ">=3.2"
coverage = {version = ">=6.4", extras = ["toml"]}
django-anylink = ">=2.0.1"
django-filer = ">=2.2.3"

[tool.poetry.extras]
docs = ["Sphinx", "django-filer", "django-anylink"]

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --tb=short --nomigrations"
testpaths = ["markymark", "tests"]
flake8-max-line-length = 96
flake8-ignore = ["E203", "E266", "E501", "W503"]
flake8-max-complexity = 18
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.black]
line-length = 96
skip-string-normalization = true
skip-numeric-underscore-normalization = true
include = "\\.pyi?$"
exclude = "/(\\.git|\\.tox|build|dist)/"

[tool.coverage.run]
branch = true
source = ["markymark"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError"]
